--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    {% block title %}{% endblock %}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% block styles %}{% endblock %}
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
+    {% block header_js %}{% endblock %}
 </head>
+
 <body>
-    
+    <div class='container'>
+        {% block content %}{% endblock %}
+    </div>
 </body>
+
+{% block footer_js %}{% endblock %}
+
 </html>
